--- a/stm32workspace/tcddriver/Debug/makefile
+++ b/stm32workspace/tcddriver/Debug/makefile
@@ -38,34 +38,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := tcddriver
+BUILD_ARTIFACT_NAME := tcddriver2
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-tcddriver.elf \
+tcddriver2.elf \
 
 MAP_FILES += \
-tcddriver.map \
+tcddriver2.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-tcddriver.list \
+tcddriver2.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: tcddriver.elf secondary-outputs
+main-build: tcddriver2.elf secondary-outputs
 
 # Tool invocations
-tcddriver.elf tcddriver.map: $(OBJS) $(USER_OBJS) C:\Users\Faizan\ Tabassum\Desktop\test\spectrometer_HW\stm32workspace\tcddriver\STM32F401CCUX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "tcddriver.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Faizan Tabassum\Desktop\test\spectrometer_HW\stm32workspace\tcddriver\STM32F401CCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="tcddriver.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+tcddriver2.elf tcddriver2.map: $(OBJS) $(USER_OBJS) C:\Users\Faizan\ Tabassum\Desktop\workspace3\tcddriver2\STM32F401CCUX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "tcddriver2.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Faizan Tabassum\Desktop\workspace3\tcddriver2\STM32F401CCUX_FLASH.ld" --specs=nosys.specs -Wl,-Map="tcddriver2.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -74,14 +74,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-tcddriver.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "tcddriver.list"
+tcddriver2.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "tcddriver2.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) default.size.stdout tcddriver.elf tcddriver.list tcddriver.map
+	-$(RM) default.size.stdout tcddriver2.elf tcddriver2.list tcddriver2.map
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
